<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvStateName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/State"
        android:textColor="#052A6A" />

    <TextView
        android:id="@+id/tvConfirmed"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="12sp"
        android:padding="2dp"
        android:text="@string/Confirmed"
        android:textColor="@color/colorTotalConfirmed" />

    <TextView
        android:id="@+id/tvRecovered"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="12sp"
        android:padding="2dp"
        android:text="@string/Recovered"
        android:textColor="@color/colorTotalRecovered" />


    <TextView
        android:id="@+id/tvDeaths"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/Death"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorTotalDeaths" />


    <TextView
        android:id="@+id/tvActive"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/Active"
        android:textColor="@color/colorTotalActive" />



</LinearLayout>
