<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/corona"
        android:id="@+id/coronaImage"/>

    <TextView
        android:id="@+id/tvcovid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Covid"
        android:textColor="#fff"
        android:layout_below="@+id/coronaImage"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/trackTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvcovid"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/track"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="#fff"
        android:textSize="18sp" />


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/view">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                android:background="@drawable/main_rec"
                android:id="@+id/lAllAbout">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/micro"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allabout"
                    android:textSize="20sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/covid"
                    android:textSize="20sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:id="@+id/lPmCares"
                android:background="@drawable/main_rec"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/donation"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pmcares"
                    android:textSize="20sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/donation"
                    android:textSize="15sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                android:background="@drawable/main_rec"
                android:id="@+id/lTrackWorld">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/world"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trackcases"
                    android:textSize="18sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inworld"
                    android:textSize="18sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:id="@+id/lTrackIndia"
                android:background="@drawable/main_rec"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/india"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trackcases"
                    android:textSize="20sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inIndia"
                    android:textSize="20sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:weightSum="2">

        <LinearLayout
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                android:background="@drawable/main_rec"
                android:id="@+id/lCope">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/counseling"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cope"
                    android:textSize="15sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/situation"
                    android:textSize="15sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:id="@+id/lHelpline"
                android:background="@drawable/main_rec"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/helpine"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Helpline"
                    android:textSize="20sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Numbers"
                    android:textSize="20sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                android:background="@drawable/main_rec"
                android:id="@+id/lConnectGov">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/mygov"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect"
                    android:textSize="15sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsapp"
                    android:textSize="15sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/withG"
                    android:textSize="15sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:id="@+id/lConnectWho"
                android:background="@drawable/main_rec"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/who"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect"
                    android:textSize="15sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsapp"
                    android:textSize="15sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/withwho"
                    android:textSize="15sp"
                    android:textColor="#052A6A"
                    android:fontFamily="@font/montserrat_medium"
                    android:textAlignment="center"/>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>

</RelativeLayout>