<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Transmission">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/faq_rec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_arrow_back"
        android:id="@+id/back_arrow_transmission" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/Transmission"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transmit"
        android:layout_below="@+id/view"
        android:text="@string/topic"
        android:layout_margin="20sp"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="#052A6A"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/transmit"
        android:orientation="horizontal"
        android:id="@+id/coughing"
        android:background="@drawable/rounded_other"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:src="@drawable/coughing"
            android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Coughing"
        android:textSize="20sp"
        android:textColor="#052A6A"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_semibold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/coughing"
        android:orientation="horizontal"
        android:background="@drawable/rounded_other"
        android:layout_margin="20dp"
        android:id="@+id/touching">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:src="@drawable/bacteria"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Shaking"
            android:textSize="20sp"
            android:textColor="#052A6A"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_semibold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/touching"
        android:id="@+id/object"
        android:orientation="horizontal"
        android:background="@drawable/rounded_other"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:src="@drawable/touching" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Touching"
            android:textSize="20sp"
            android:layout_marginTop="15sp"
            android:textColor="#052A6A"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_semibold"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spread"
        android:layout_below="@+id/object"
        android:text="@string/spread"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="#052A6A"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>